Accouting cost center ui updated

--- a/KGERP/Views/Configuration/AccountingCostCenter.cshtml
+++ b/KGERP/Views/Configuration/AccountingCostCenter.cshtml
@@ -45,6 +45,13 @@
                                 </div>
 
                                 <div class="form-group">
+                                    <label asp-for="ProjectId">Project Short Name : </label>
+                                    @Html.TextBoxFor(model => model.ShortName, new { id = "txtMenuName", @class = "form-control input-sm", @placeholder = "Project Name" })
+                                    @Html.ValidationMessageFor(model => model.ShortName, "", new { @class = "text-danger" })
+                                    <small class="text-danger" id="error-message"></small>
+                                </div>
+
+                                <div class="form-group">
                                     <div class="col-md-4">
                                         <button type="button" onclick="resetForm()" class="btn btn-secondary" data-dismiss="modal">Reset</button>
                                     </div>
