--- a/KGERP/Views/Configuration/AccountingCostCenter.cshtml
+++ b/KGERP/Views/Configuration/AccountingCostCenter.cshtml
@@ -3,7 +3,6 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @model KGERP.Service.Implementation.Configuration.VMUserMenu
-<script src="~/bower_components/jquery/dist/jquery.min.js"></script>
 
 <section class="content-header">
     <h1>
@@ -34,7 +33,7 @@
 
                                 <div class="form-group">
                                     <label asp-for="ProjectId">Select Project Type : </label>
-                                    @Html.DropDownListFor(model => model.accounting_CostCenterTypeId, new SelectList(Model.accounting_CostCenterTypes.OrderBy(order => order.Name), "CostCenterTypeId", "Name"), "== Select Project Type ==", new { id = "selectProjectType", @class = "form-control" })
+                                    @Html.DropDownListFor(model => model.accounting_CostCenterTypeId, new SelectList(Model.accounting_CostCenterTypes.OrderBy(order => order.Name), "CostCenterTypeId", "Name"), "== Select Project Type ==", new { id = "selectProjectType", @class = "form-control", })
                                     @Html.ValidationMessageFor(model => model.accounting_CostCenterTypeId, "", new { @class = "text-danger" })
                                 </div>
 
@@ -48,7 +47,7 @@
                                     <label asp-for="ProjectId">Short Name : </label>
                                     @Html.TextBoxFor(model => model.ShortName, new { id = "txtShortName", @class = "form-control input-sm", @placeholder = "Short Name" })
                                     @Html.ValidationMessageFor(model => model.ShortName, "", new { @class = "text-danger" })
-                                    <small class="text-danger" id="error-message"></small>
+                                    <small class="text-danger" id="errorMessage"></small>
                                 </div>
 
                                 <div class="form-group">
@@ -90,33 +89,33 @@
                                                     int sl = 0;
                                                     foreach (var item in Model.DataList.OrderBy(order => order.Name))
                                                     {
-                                                                                        <tr>
-                                                                                            <td>
-                                                                                                @(++sl)
-                                                                                                <input type="hidden" id="hidCompanyFK_@item.ID" value="@item.CompanyFK" />
-                                                                                                <input type="hidden" id="costCenterTypeId_@item.ID" name="accounting_CostCenterTypeId" value="@item.accounting_CostCenterTypeId" />
-                                                                                            </td>
+                                                        <tr>
+                                                            <td>
+                                                                @(++sl)
+                                                                <input type="hidden" id="hidCompanyFK_@item.ID" value="@item.CompanyFK" />
+                                                                <input type="hidden" id="costCenterTypeId_@item.ID" name="accounting_CostCenterTypeId" value="@item.accounting_CostCenterTypeId" />
+                                                            </td>
 
-                                                                                            <td id="tdProjectName_@item.ID">
-                                                                                                @item.Name
-                                                                                            </td>
+                                                            <td id="tdProjectName_@item.ID">
+                                                                @item.Name
+                                                            </td>
 
-                                                                                            <td id="tdProjectName_@item.ID">
-                                                                                                @item.ShortName
-                                                                                            </td>
+                                                            <td id="tdProjectName_@item.ID">
+                                                                @item.ShortName
+                                                            </td>
 
-                                                                                            <td id="tdprojectType_@item.ID">
-                                                                                                @item.CostCenterTypeName
-                                                                                            </td>
+                                                            <td id="tdprojectType_@item.ID">
+                                                                @item.CostCenterTypeName
+                                                            </td>
 
-                                                                                            <td>
-                                                                                                <a id="@item.ID" onclick=" makeEditble(this);" class="linkPointer" data-toggle="modal" data-target="#exampleModal" title="Edit" data-placement="top"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
-                                                                                                <a id="@item.ID" onclick="makeDeletable(@item.ID);" class="linkPointer" data-toggle="modal" data-target="#itemActionModal" title="Delete"
-                                                                                                   data-placement="top">
-                                                                                                    <i class="glyphicon glyphicon-trash" aria-hidden="true"></i>
-                                                                                                </a>
-                                                                                            </td>
-                                                                                        </tr>
+                                                            <td>
+                                                                <a id="@item.ID" onclick=" makeEditble(this);" class="linkPointer" data-toggle="modal" data-target="#exampleModal" title="Edit" data-placement="top"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
+                                                                <a id="@item.ID" onclick="makeDeletable(@item.ID);" class="linkPointer" data-toggle="modal" data-target="#itemActionModal" title="Delete"
+                                                                   data-placement="top">
+                                                                    <i class="glyphicon glyphicon-trash" aria-hidden="true"></i>
+                                                                </a>
+                                                            </td>
+                                                        </tr>
                                                     }
                                                 }
                                             }
@@ -160,6 +159,7 @@
 
 @section scripts {
     <script type="text/javascript">
+
         $(document).ready(function () {
             $('.formValidator').bootstrapValidator();
         });
@@ -184,10 +184,32 @@
                 $('#selectProjectType').val($('#costCenterTypeId_' + id).val());
             }
         }
+
         function resetForm() {
             $('#userMenuFormId')[0].reset();
             $('#btnSave').html("<i class='fa fa-edit'></i>&nbsp;Add");
         }
+
+        $("#txtShortName").on('input', function (event) {
+            var getValue = $("#txtShortName").val();
+            if (getValue != null) {
+                $.ajax({
+                    type: "GET",
+                    url: "/Configuration/CheckShortName",
+                    dataType: "json",
+                    data: { shortName: getValue },
+                    success: function (data) {
+                        if (data) {
+                            $("#errorMessage").text("This short name is already used!");
+                            $("#btnSave").prop("disabled", true);
+                        } else {
+                            $("#errorMessage").text("");
+                            $("#btnSave").prop("disabled", false);
+                        }
+                    }
+                });
+            }
+        })
 
     </script>
 }
