--- a/KGERP/Views/Configuration/CommonRawProductCategory.cshtml
+++ b/KGERP/Views/Configuration/CommonRawProductCategory.cshtml
@@ -1,7 +1,7 @@
 ﻿@model KGERP.Service.Implementation.Configuration.VMCommonProductCategory
 @using KG.Core.Services
 @{
-    ViewData["Title"] = "New Requisition Type";
+    ViewData["Title"] = "New Material Type";
     Layout = "~/Views/Shared/_Layout.cshtml";
 
 
@@ -15,7 +15,7 @@
 </style>
 <section class="content-header">
     <h1>
-        New Requisition Type
+        New Material Type
     </h1>
     <ol class="breadcrumb">
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
@@ -42,8 +42,8 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="form-group">
-                                            <label>Requisition Type Name :</label>
-                                            @Html.TextBoxFor(model => model.Name, new { id = "txtProductCategoryName", @class = "form-control input-sm", @placeholder = "Requisition type name", required = "true", })
+                                            <label>Material Type Name :</label>
+                                            @Html.TextBoxFor(model => model.Name, new { id = "txtProductCategoryName", @class = "form-control input-sm", @placeholder = "Material type name", required = "true", })
                                             @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
@@ -73,11 +73,11 @@
                             <div class="box-body">
 
                                 <div class="table-responsive col-md-12">
-                                    <table id="KgErpDataTable" style="background-color: #ddd;" class="table table-striped">
+                                    <table id="KgErpDataTable" class="table table-dark table-responsive table-striped">
                                         <thead>
                                             <tr>
                                                 <th>SL</th>
-                                                <th>Requisition Type</th>
+                                                <th>Material Type</th>
                                                 <th>Action</th>
                                             </tr>
                                         </thead>
