--- a/KGERP/Views/BillRequisition/ITHeadBRApproveSlave.cshtml
+++ b/KGERP/Views/BillRequisition/ITHeadBRApproveSlave.cshtml
@@ -140,7 +140,7 @@
                                                 <th>SL</th>
                                                 <th>@((Model.BillRequisitionTypeId == (int)EnumBillRequisitionType.Overhead)? "Item" : "Material")</th>
                                                 <th>Unit</th>
-                                                <th>Remarks</th>
+                                                <th>Remarks/Particular</th>
                                                 <th>Est. Qty</th>
                                                 <th>Recived So Far</th>
                                                 <th>Remaining Qty</th>
